--- a/libraries/gks/sun83.tex
+++ b/libraries/gks/sun83.tex
@@ -3,248 +3,36 @@
 %   program SUN83-C. The 6 gks_74.ps files produced must then be renamed to
 %   sun83-c1.ps to sun83-c6.ps.
 %
-
-%\documentstyle[11pt]{article}
-\documentclass[11pt]{article}
-\usepackage{graphicx}
-\pagestyle{myheadings}
+\documentclass[11pt,nolof]{starlink}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
-\newcommand{\stardoccategory}  {Starlink User Note}
-\newcommand{\stardocinitials}  {SUN}
-\newcommand{\stardocsource}    {sun83.13}
-\newcommand{\stardocnumber}    {83.13}
-\newcommand{\stardocauthors}   {D L Terrett}
-\newcommand{\stardocdate}      {8 December 1995}
-\newcommand{\stardoctitle}     {GKS --- Graphical Kernel System}
-\newcommand{\stardocversion}   {1.37}
-\newcommand{\stardocmanual}    {User's Manual}
+\stardoccategory    {Starlink User Note}
+\stardocinitials    {SUN}
+\stardocsource      {sun83.13}
+\stardocnumber      {83.13}
+\stardocauthors     {D L Terrett}
+\stardocdate        {8 December 1995}
+\stardoctitle       {GKS --- Graphical Kernel System}
+\stardocversion     {1.37}
+\stardocmanual      {User's Manual}
+\stardocabstract {%
+The Graphical Kernel System provides a device independent
+graphics plotting library.
+}
 % ? End of document identification
 % -----------------------------------------------------------------------------
 
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markright{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
+% ? Document specific \providecommand or \newenvironment commands.
+\providecommand{\key}[1]{\fbox{#1}}
 
-% -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  star2html to signify raw TeX that latex2html cannot process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newenvironment{latexonly}{}{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\html}[1]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{{\bf LaTeX}{2}{\tt{HTML}}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\newcommand{\latex}[1]{#1}
-\newcommand{\setunderscore}{\renewcommand{\_}{{\tt\symbol{95}}}}
-\latex{\setunderscore}
-
-%  Redefine the \tableofcontents command. This procrastination is necessary
-%  to stop the automatic creation of a second table of contents page
-%  by latex2html.
-\newcommand{\latexonlytoc}[0]{\tableofcontents}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-\newcommand{\key}[1]{\fbox{#1}}
-\begin{htmlonly}
- \newcommand{\key}[1]{{\bf<#1>}}
-\end{htmlonly}
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
+\scfrontmatter
 
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / {\sc Rutherford Appleton Laboratory} \hfill {\bf \stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\bf  \stardoctitle \\ [2.5ex]}
-%   {\LARGE\bf \stardocversion \\ [4ex]}
-%   {\Huge\bf  \stardocmanual}
-   \end{center}
-   \vspace{5mm}
-
-% ? Heading for abstract if used.
-%   \vspace{10mm}
-%   \begin{center}
-%      {\Large\bf Abstract}
-%   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> \end{rawhtml}
-
-% ? Add picture here if required.
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC}{http://www.cclrc.ac.uk} /
-      \htmladdnormallink{Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk/ral} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \renewcommand{\latexonlytoc}[0]{}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-%  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%   ==================
-% ? End of document abstract
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-% \newpage
-% \begin{latexonly}
-%   \setlength{\parskip}{0mm}
-%   \latexonlytoc
-%   \setlength{\parskip}{\medskipamount}
-%   \markright{\stardocname}
-% \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-%\newpage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
 
 \section{Introduction}
 This note describes the release on Starlink of the RAL/ICL GKS graphics
@@ -271,7 +59,7 @@ hardware.
 The RAL/ICL GKS implementation has several advantages of its own;
 it contains features which are not all found in any other single package:
 \begin{itemize}
-\item Area fill with several fill styles on {\em all\/} devices.
+\item Area fill with several fill styles on \emph{all\/} devices.
 \item Cell array supported on dot matrix printers.
 \item Multiple fonts.
 \item Selective clearing of display surface.
@@ -392,44 +180,44 @@ respectively and so 5 should be used to connect a workstation to your
 terminal and 0 and 6 not at all.
 
 The device or file name associated with a connection identifier can be
-specified by creating an environment variable of the form {\tt GCON{\em{nn}}},
-where {\em nn} is the connection identifier (with a leading zero if
+specified by creating an environment variable of the form \texttt{GCON{\em{nn}}},
+where \emph{nn} is the connection identifier (with a leading zero if
 necessary)
 which translates to the device or file name.
-For example, to connect a workstation to a file called {\tt myplot.ps}
+For example, to connect a workstation to a file called \texttt{myplot.ps}
 on unit 9 you would type:
-\begin{quote}{\tt
-setenv GCON09 myplot.ps
-}\end{quote}
+\begin{terminalv}
+% setenv GCON09 myplot.ps
+}\end{terminalv}
 If not such environment variable exists then the usual default file names
-for FORTAN i/o will be used (typically {\tt fort.{\em{n}}}).
+for FORTAN i/o will be used (typically \texttt{fort.{\em{n}}}).
 
 The X windows driver ignores the connection identifier.
 
 \section{Compiling and Linking GKS programs}
-Before compiling a program that uses the GKS include file {\tt GKS\_PAR}
+Before compiling a program that uses the GKS include file \texttt{GKS\_PAR}
 you must first execute the
 command:
-\begin{quote}\tt
-\$ gks\_dev
-\end{quote}
+\begin{terminalv}
+% gks_dev
+\end{terminalv}
 
 Programs are linked with GKS by:
-\begin{quote}\tt
-\$ ld objmodule -L/star/lib `gks\_link`
-\end{quote}
+\begin{terminalv}
+% ld objmodule -L/star/lib `gks_link`
+\end{terminalv}
 
 \section{GKS Error Handler}
 The error handling routine that is used by default reports errors via the
 Starlink Error Reporting System (\xref{SUN/104}{sun104}) and the error
-channel parameter passed to {\tt GOPWK} is ignored.
+channel parameter passed to \texttt{GOPWK} is ignored.
 
 Using the ERR package for error reporting not only makes GKS's error reporting
 the same as other Starlink subroutine libraries, but also allows programs
 to detect that GKS has reported an error without having to supply their
 own error reporting routine. The following example show how this is
 done:
-\begin{verbatim}
+\begin{terminalv}
       INTEGER LASTER
 
 *   Include GKS error codes
@@ -453,7 +241,7 @@ done:
 ...
       END IF
 ...
-\end{verbatim}
+\end{terminalv}
 
 \section{External Names}
 All the routines and common blocks visible to the linker, other than the
@@ -496,7 +284,7 @@ The RAL/ICL GKS is an implementation of the 7.4 draft
 is the version adopted as an ISO standard
 
 \section{Reporting Bugs and Problems}
-Problems and suspected bugs should be reported to {\tt starlink@jiscmail.ac.uk}.
+Problems and suspected bugs should be reported to \texttt{starlink@jiscmail.ac.uk}.
 Bugs will be verified and then, if the problem is not in a Starlink written
 device driver, reported to Computing Services Division graphics section.
 
@@ -525,7 +313,7 @@ as function identifier values are registered with ISO.
 \newpage\appendix
 \section{Workstation Specific Information}\label{workstations}
 
-\newcommand{\sect}[1]{{\bf #1}}
+\providecommand{\sect}[1]{\textbf{#1}}
 
 \subsection{Cifer Graphics Terminals}
 \label{cifgt}
@@ -755,18 +543,18 @@ base window &overlay\\\hline
 \sect{Operation}
 
 When an X workstation is opened the device handler connects to the
-default X display (defined by the {\tt DISPLAY} environment variable)
+default X display (defined by the \texttt{DISPLAY} environment variable)
 and searches the display for a GWM
 (\xref{Graphics Window Manager}{sun130}{}) window
-with the name {\tt GKS\_{\em{nnnn}}},
-where {\em nnnn} is the workstation type. If the window is
+with the name \texttt{GKS\_{\em{nnnn}}},
+where \emph{nnnn} is the workstation type. If the window is
 not found it is created. The connection
 identifier is ignored and only one workstation of a particular
 workstation type can be open at one time.
 
 The size, number of colours and other properties of the window can be
 controlled either by using the X resources database or by creating the
-window with the {\tt xmake} command as described in SUN/130. The colours
+window with the \texttt{xmake} command as described in SUN/130. The colours
 of colour table entries 0 and 1 are defined by the background and
 foreground colours of the window.
 
