gks: Only specify document number once in SUN/83

--- a/libraries/gks/sun83.tex
+++ b/libraries/gks/sun83.tex
@@ -9,7 +9,7 @@
 % ? Document identification
 \stardoccategory    {Starlink User Note}
 \stardocinitials    {SUN}
-\stardocsource      {sun83.13}
+\stardocsource      {sun\stardocnumber}
 \stardocnumber      {83.13}
 \stardocauthors     {D L Terrett}
 \stardocdate        {8 December 1995}
