ard: SUN/183 em to emph in noteroutine

--- a/libraries/ard/sun183.tex
+++ b/libraries/ard/sun183.tex
@@ -34,9 +34,9 @@ shapes. Data arrays can be multi-dimensional.
 
 \providecommand{\noteroutine}[3]{
 \begin{description}
-\item [{\small \bf {#1} \parbox[t]{4in}{#2}}]
+\item [{\small \textbf{#1} \parbox[t]{4in}{#2}}]
 \mbox{} \nopagebreak \\
-{\em #3}
+\emph{#3}
 \end{description}
 }
 
